# spin-trigger-command

./: Cargo.toml  README.md  release-process.md  spin-pluginify.toml
.cargo/: audit.toml
.github/workflows/: build.yaml  e2e.yml
examples/async/: Cargo.toml  README.md  spin.toml
examples/async/src/: main.rs
examples/hello-world/: Cargo.toml  spin.toml
src/: lib.rs
test/: e2e.sh
