[package]
name = "trigger-command"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = "1.87"

[workspace.package]
version = "0.5.2"
authors = ["Spin Framework Contributors"]
edition = "2021"

[workspace]

[dependencies]
anyhow = "1.0"
clap = { version = "3.2.25", features = ["derive", "env"] }
serde = "1.0"
spin-trigger = { git = "https://github.com/spinframework/spin", tag = "v3.6.2" }
spin-core = { git = "https://github.com/spinframework/spin", tag = "v3.6.2" }
spin-telemetry = { git = "https://github.com/spinframework/spin", tag = "v3.6.2" }
spin-factors = { git = "https://github.com/spinframework/spin", tag = "v3.6.2" }
spin-factor-wasi = { git = "https://github.com/spinframework/spin", tag = "v3.6.2" }
spin-runtime-factors = { git = "https://github.com/spinframework/spin", tag = "v3.6.2" }
tokio = { version = "1", features = ["rt", "macros"] }
tracing = { version = "0.1", features = ["log"] }
wasmtime-wasi = "41.0.4"

[target.'cfg(target_os = "linux")'.dependencies]
# This needs to be an explicit dependency to enable
# '--features openssl/vendored', which is used for Linux releases.
openssl = { version = "0.10" }

