[package]
name = "trigger-command"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = "1.91"

[workspace.package]
version = "0.5.3"
authors = ["Spin Framework Contributors"]
edition = "2021"

[workspace]

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive", "env"] }
serde = "1.0"
spin-trigger = { git = "https://github.com/spinframework/spin", branch = "main" }
spin-core = { git = "https://github.com/spinframework/spin", branch = "main" }
spin-telemetry = { git = "https://github.com/spinframework/spin", branch = "main" }
spin-factors = { git = "https://github.com/spinframework/spin", branch = "main" }
spin-factor-wasi = { git = "https://github.com/spinframework/spin", branch = "main" }
spin-runtime-factors = { git = "https://github.com/spinframework/spin", branch = "main" }
tokio = { version = "1", features = ["rt", "macros"] }
tracing = { version = "0.1", features = ["log"] }
wasmtime-wasi = { version = "43", features = ["p3"] }

[target.'cfg(target_os = "linux")'.dependencies]
# This needs to be an explicit dependency to enable
# '--features openssl/vendored', which is used for Linux releases.
openssl = { version = "0.10" }

